--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
@@ -13,7 +13,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="2dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/imvAuthorThumbContainer"
             android:layout_width="205dp"
             android:layout_height="match_parent"
@@ -28,6 +28,16 @@
                 android:layout_gravity="fill"
                 android:contentDescription="@string/author_img"
                 android:scaleType="fitXY" />
+
+            <ImageView
+                android:id="@+id/videoIndicatorImageView"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/play_1"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/txvArticleTitle"
@@ -45,7 +55,7 @@
                 android:text="@string/title"
                 android:textColor="@color/black_color"
                 android:textSize="14sp" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
