--- a/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
@@ -173,7 +173,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:background="@color/black" />
+            android:background="@color/login_grey" />
 
         <TextView
             android:id="@+id/filterTextView"
@@ -202,32 +202,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:background="@color/white_color"
+            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/sort_article_round_corner_bg"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:paddingLeft="16dp"
-                android:paddingTop="5dp"
-                android:text="Sort by" />
+                android:gravity="center"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
+                android:text="Sort by"
+                android:textSize="16sp"
+                android:textColor="@color/grey"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/grey_faded" />
 
             <TextView
                 android:id="@+id/recentSort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center"
+                android:padding="15dp"
                 android:text="Recent"
+                android:textColor="@color/input_text_color"
                 android:textSize="16sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/login_grey" />
 
             <TextView
                 android:id="@+id/popularSort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center"
                 android:padding="16dp"
                 android:text="Popular"
+                android:textColor="@color/input_text_color"
                 android:textSize="16sp" />
         </LinearLayout>
     </FrameLayout>
