--- a/MyCity4Kids/MyCity4Kids/res/layout/sub_sub_topics_filter_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/sub_sub_topics_filter_item.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <CheckBox
+    <android.support.v7.widget.AppCompatCheckBox
         android:id="@+id/subSubTopicsCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:buttonTint="@color/grey"
         android:paddingBottom="10dp"
         android:paddingRight="5dp"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        app:buttonTint="@color/grey" />
 
     <TextView
         android:id="@+id/itemNameTextView"
