video type indicator + mark notifications read API + Home page listing ordering

--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_listing_item.xml
@@ -59,7 +59,7 @@
                     android:layout_height="90dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="60dp"
-                    android:src="@drawable/play_1"
+                    android:src="@drawable/ic_video_icon"
                     android:visibility="invisible" />
 
                 <TextView
