--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
@@ -36,7 +36,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/play_1"
+                android:src="@drawable/ic_video_icon"
                 android:visibility="invisible" />
 
             <TextView
