--- a/MyCity4Kids/MyCity4Kids/res/layout/vlogs_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/vlogs_listing_item.xml
@@ -53,6 +53,15 @@
                     android:layout_alignParentTop="true"
                     android:background="#80000000" />
 
+                <ImageView
+                    android:id="@+id/videoIndicatorImageView"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="60dp"
+                    android:src="@drawable/ic_video_icon"
+                    android:visibility="visible" />
+
                 <TextView
                     android:id="@+id/txvArticleTitle"
                     android:layout_width="wrap_content"
