--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
@@ -5,175 +5,225 @@
     android:background="@color/white_color"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/viewFollowingTopics"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawablePadding="50dp"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="Topics Followed"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
+        android:layout_height="match_parent">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
-
-    <TextView
-        android:id="@+id/notifications"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawablePadding="50dp"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="Notifications"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
-
-    <TextView
-        android:id="@+id/cityChange"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="Change City ()"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/facebookLabel"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginBottom="1dp"
-            android:layout_toLeftOf="@+id/facebookConnect"
+            android:layout_height="match_parent"
             android:background="@color/white_color"
-            android:gravity="center_vertical"
-            android:padding="10dp"
-            android:text="Facebook"
-            android:textColor="@color/black_color"
-            android:textSize="15sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/facebookConnect"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="1dp"
-            android:background="@color/white_color"
-            android:gravity="center_vertical"
-            android:padding="10dp"
-            android:text="CONNECT"
-            android:textColor="@color/red_selected"
-            android:textSize="15sp" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/languageSubscriptions"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Language Setting"
+                android:textColor="@color/black_color"
+                android:textSize="15sp"
+                android:visibility="gone" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color"
+                android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/editProfile"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawablePadding="50dp"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="Edit Profile"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
+            <TextView
+                android:id="@+id/viewFollowingTopics"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawablePadding="50dp"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Topics Followed"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
 
-    <TextView
-        android:id="@+id/family_details"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="Family Details"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
+            <TextView
+                android:id="@+id/notifications"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawablePadding="50dp"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Notifications"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
 
-    <TextView
-        android:id="@+id/logout"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="Log Out"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
+            <TextView
+                android:id="@+id/subscriptions"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Email Subscription"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_color" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
 
-    <LinearLayout
-        android:id="@+id/appVersionLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:paddingLeft="5dp">
+            <TextView
+                android:id="@+id/cityChange"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Change City ()"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/appVersionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="App-Version: " />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/copyright_mycity4kids_2016" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="All rights reserved" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/facebookLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginBottom="1dp"
+                    android:layout_toLeftOf="@+id/facebookConnect"
+                    android:background="@color/white_color"
+                    android:gravity="center_vertical"
+                    android:padding="10dp"
+                    android:text="Facebook"
+                    android:textColor="@color/black_color"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/facebookConnect"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="1dp"
+                    android:background="@color/white_color"
+                    android:gravity="center_vertical"
+                    android:padding="10dp"
+                    android:text="CONNECT"
+                    android:textColor="@color/red_selected"
+                    android:textSize="15sp" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/editProfile"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawablePadding="50dp"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Edit Profile"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/family_details"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:drawableRight="@drawable/arrow_xxhdpi"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Family Details"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/white_color"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:text="Log Out"
+                android:textColor="@color/black_color"
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_color" />
+
+            <LinearLayout
+                android:id="@+id/appVersionLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:paddingLeft="5dp">
+
+                <TextView
+                    android:id="@+id/appVersionTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="App-Version: " />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/copyright_mycity4kids_2016" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="All rights reserved" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
