--- a/MyCity4Kids/MyCity4Kids/res/layout/language_settings_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/language_settings_item.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.SwitchCompat
-        android:id="@+id/notificationStatus"
+        android:id="@+id/languageStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:checked="true"
         android:padding="20dp"
         android:text="notification"
         android:theme="@style/SwitchStyle" />
