--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
@@ -27,13 +27,13 @@
                 android:text="Language Setting"
                 android:textColor="@color/black_color"
                 android:textSize="15sp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/gray_color"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/viewFollowingTopics"
