--- a/MyCity4Kids/MyCity4Kids/res/layout/business_list_activitykidsres.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/business_list_activitykidsres.xml
@@ -213,7 +213,9 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:elevation="8dp"
-        android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTheme.Title" />
 
     <RelativeLayout
         android:id="@+id/rltHeadertmp"
