--- a/MyCity4Kids/WordPressEditor/src/main/res/values/styles.xml
+++ b/MyCity4Kids/WordPressEditor/src/main/res/values/styles.xml
@@ -46,4 +46,13 @@
     <style name="ImageOptionsDialogInput">
         <item name="android:layout_marginBottom">@dimen/image_settings_dialog_input_margin_bottom</item>
     </style>
+
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/black</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/black</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/white</item>
+    </style>
 </resources>
