GTM changes for change email, subscription and language feed preferences + Video runtime permission fixes + other bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/language_settings_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/language_settings_item.xml
@@ -11,5 +11,6 @@
         android:checked="true"
         android:padding="20dp"
         android:text="notification"
+        android:textAllCaps="true"
         android:theme="@style/SwitchStyle" />
 </LinearLayout>
