--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_page.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_page.xml
@@ -93,7 +93,6 @@
         android:drawableBottom="@drawable/underline"
         android:gravity="start"
         android:hint="Let our readers get to know you"
-        android:maxLength="200"
         android:padding="10dp"
         android:textColor="@color/black_color" />
 
@@ -107,7 +106,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:gravity="right"
-        android:text="200 Characters"
+        android:text="200 Words"
         android:textSize="12sp" />
 
     <Button
