--- a/MyCity4Kids/MyCity4Kids/res/layout/subscription_settings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/subscription_settings.xml
@@ -33,6 +33,7 @@
         android:layout_toLeftOf="@+id/editSubscriptionEmailTextView"
         android:gravity="center|left"
         android:padding="10dp"
+        android:singleLine="true"
         android:text=""
         android:textColor="@color/grey"
         android:textSize="15sp"
