GTM Renewal + Dynamic Language support + UI fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -33,12 +33,7 @@
                 android:layout_height="wrap_content" />
 
             <com.mycity4kids.widget.HorizontalScrollCustomView
-                android:id="@+id/funnyVideosSection"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <com.mycity4kids.widget.HorizontalScrollCustomView
-                android:id="@+id/hindiSection"
+                android:id="@+id/languageSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -237,6 +232,11 @@
                     android:textStyle="bold"
                     android:visibility="gone" />
             </LinearLayout>
+
+            <com.mycity4kids.widget.HorizontalScrollCustomView
+                android:id="@+id/funnyVideosSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <RelativeLayout
