--- a/MyCity4Kids/MyCity4Kids/res/layout/parenting_blog_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/parenting_blog_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,7 +16,23 @@
         android:minHeight="?attr/actionBarSize"
         android:visibility="visible"
         fab:theme="@style/ToolbarTheme"
-        fab:titleTextAppearance="@style/ToolbarTheme.Title" />
+        fab:titleTextAppearance="@style/ToolbarTheme.Title">
+
+        <TextView
+            android:id="@+id/contributorTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contributor in"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+
+        <Spinner
+            android:id="@+id/spinner_nav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:dropDownVerticalOffset="40dp" />
+
+    </android.support.v7.widget.Toolbar>
 
     <ListView
         android:id="@+id/blog_listing"
