--- a/MyCity4Kids/MyCity4Kids/res/layout/vlogs_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/vlogs_detail_activity.xml
@@ -252,7 +252,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="TRENDING BLOGS"
+                    android:text="TRENDING VIDEOS"
                     android:textColor="@color/primary_blue"
                     android:textSize="@dimen/ad_trending" />
 
